--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <div>
     <input type="text" placeholder="search Food From Joe😜 Food Coner!"
-    [(ngModel)]="searchItem" >
-    <button (click)="search()">Search Food</button>
+    [(ngModel)]="searchItem" (change)="search">
+    <button (click)="search()">Search</button>
 </div>
 
 <!-- [value]="searchItem" -->
