--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,5 @@
 <div>
-    <input type="text" placeholder="search Food From Joe😜 Food Coner!"
+    <input type="text" placeholder="search Food From Joe🤤 Food Coner!"
     [(ngModel)]="searchItem" (change)="search">
     <button (click)="search()">Search</button>
 </div>
