--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,8 @@
 
 <ul>
     <li *ngFor="let food of foods">
-       <a href="#">
+
+     <a routerLink="/food/{{food.id}}">
         <img src="{{food.imageUrl}}" alt="food images">
             <div class="content">
                 <div class="name">
@@ -35,6 +36,6 @@
                     {{food.price|currency}}
                 </div>
             </div>
-       </a>
+    </a>
     </li>
 </ul>
